Major refactor: wifi-positioning-integration-service implementation and enhanced requirements
- Enhanced integration-requirements.md with comprehensive VLSS vs Frisco comparison capabilities
- Added detailed cross-service result analysis scenarios for cell tower fallback detection
- Implemented complete integration service DTOs, controllers, and services
- Added comprehensive structured logging schema for positioning method analysis
- Implemented positioning service client and comparison logic
- Added enhanced performance metrics and data quality analysis
- Updated configuration for cell fallback detection and detailed logging
- Cleaned up old positioning service files that were incorrectly placed in integration service
- Added comprehensive test coverage for integration components
- Enhanced wifi-positioning-service response DTOs and algorithm selection
- Updated consumer service configurations and SSL certificates
- Added comprehensive documentation and task planning files